# wasamo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  VISION.md
.github/workflows/: ci.yml
bindings/c/: CMakeLists.txt  smoke.c  wasamo.h
bindings/rust/: Cargo.toml
bindings/rust-sys/: Cargo.toml  build.rs
bindings/rust-sys/src/: lib.rs
bindings/rust/src/: lib.rs
bindings/zig/: build.zig  build.zig.zon  smoke_test.zig  wasamo.zig
docs/: abi_spec.md  architecture.md  dsl_spec.md
docs/decisions/: README.md  m2-phase-1-cdylib-shim.md  m2-phase-2-wasamoc-output-format.md  m2-phase-3-handler-exec-location.md  phase-2-runtime-foundation.md  phase-3-layout-engine.md  phase-4-widget-implementation.md  phase-5-compositor-independence-check.md  phase-5-implicit-animations-dev-api.md  phase-6-c-abi.md  phase-7-language-bindings.md  phase-8-hello-counter.md  vision-doc-system.md  vision-internal-dsl-policy.md  vision-m1-acceptance-criteria.md  vision-post-m2-roadmap.md
docs/notes/: README.md  cdylib-shim-build-graph.md  doc-system-redesign.md  headless-verification.md  layout-engine.md  verification-environments.md  workspace-layout.md
docs/plans/: README.md  m2-plan.md
examples/counter/: counter.ui
examples/counter-c/: CMakeLists.txt  README.md  main.c
examples/counter-rust/: Cargo.toml  README.md
examples/counter-rust/src/: main.rs
examples/counter-zig/: README.md  build.zig  main.zig
experiments/ir-spike/: Cargo.toml  counter.uic
experiments/ir-spike/src/: main.rs
wasamo/: Cargo.toml
wasamo-dll/: Cargo.toml  build.rs
wasamo-dll/src/: lib.rs
wasamo-poc/: Cargo.toml
wasamo-poc/examples/: phase2_visual_check.rs  phase3_visual_check.rs  phase4_visual_check.rs  phase5_visual_check.rs
wasamo-runtime/: Cargo.toml
wasamo-runtime/examples/: phase2_visual_check.rs  phase5_visual_check.rs
wasamo-runtime/src/: abi.rs  emit.rs  experimental_ir_loader.rs  handler.rs  lib.rs  registry.rs  runtime.rs  widget.rs  window.rs
wasamo/examples/: phase3_visual_check.rs  phase4_visual_check.rs
wasamo/src/: abi.rs  emit.rs  layout.rs  lib.rs  registry.rs  runtime.rs  text.rs  widget.rs  window.rs
wasamoc/: Cargo.toml
wasamoc/src/: ast.rs  check.rs  diagnostic.rs  lexer.rs  main.rs  parser.rs
