[package]
name = "wasamo-runtime"
version = "0.1.0"
edition = "2021"

[lib]
# `name = "wasamo"` keeps the cdylib output as `wasamo.dll` / `wasamo.dll.lib`
# (the public C ABI artifact name agreed in DD-P6-007). The downside is that
# the rlib is also named `libwasamo.rlib`, which collides with the safe wrapper
# crate at bindings/rust/ (package name "wasamo"). Cargo emits a warning today;
# it may become a hard error (rust-lang/cargo#6313). Accepted for M1 — the
# collision is at the non-hashed output path, not the hashed deps path; actual
# linking is unaffected. Proper fix (splitting cdylib and rlib into separate
# crates, or renaming to wasamo_runtime.dll) is deferred to a post-M1 cleanup.
name = "wasamo"
crate-type = ["cdylib", "rlib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WinRT_Composition",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "UI",
    "UI_ViewManagement",
]
