[package]
name = "wasamo-runtime"
version = "0.1.0"
edition = "2021"

[lib]
# `name = "wasamo"` keeps the cdylib output as `wasamo.dll` / `wasamo.dll.lib`
# (the public C ABI artifact name agreed in DD-P6-007).
# `rlib` is intentionally absent: both this crate (lib.name = "wasamo") and
# the safe wrapper package (also named "wasamo") produced libwasamo.rlib,
# causing cargo to resolve counter-rust's `wasamo` dep to this internal
# rlib instead of the safe wrapper (cargo#6313 became a compile error).
# The Phase 2-5 visual-check examples that previously depended on the rlib
# were deleted in the same commit; see docs/architecture.md §11.4.
# The proper long-term fix is a cdylib-shim crate (M2 ADR).
name = "wasamo"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WinRT_Composition",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "UI",
    "UI_ViewManagement",
]
