[package]
name = "wasamo-runtime"
version = "0.1.0"
edition = "2021"

[lib]
# rlib-only: the cdylib output (`wasamo.dll`) is now produced by the
# `wasamo-dll` shim crate (DD-M2-P1-001/002). `[lib].name` is set to
# `wasamo_runtime` so the rlib filename (`libwasamo_runtime.rlib`) does
# not collide with the safe wrapper's `libwasamo.rlib` (cargo#6313).
name = "wasamo_runtime"
crate-type = ["rlib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WinRT_Composition",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "UI",
    "UI_ViewManagement",
]
