[package]
name = "wasamo-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to the Wasamo C ABI (wasamo.dll)."
links = "wasamo"

# Build-order edge: `wasamo-dll` must finish before any binary that links
# `wasamo.dll.lib`. `#[link]` alone does not create a cargo ordering edge;
# this dep entry does. DD-M2-P1-006. The `no linkable target` warning
# (cargo#6313) is accepted as a known wart — see docs/notes/cdylib-shim-build-graph.md.

[dependencies]
wasamo-dll = { path = "../../wasamo-dll" }
